--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Pokemon Dream Team</title>
-<link rel= "stylesheet" href= "https://cdn.jsdelivr.net/npm/bulma@0.9.1/bulma.sass">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pokemon DreamTeam</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  </head>
 
-<h1>Pokemon Dream Team</h1>
-<col>
+  <body>
+  <section class="section">
+    
+    <div> 
+    <h1>
+        Pokemon Dream Team
+    </h1>
+    </div>
 
-</body>
+    <div class= "columns">
+        <div class= "column">  
+            Pokemon Slot 1
+        </div>
+
+        <div class= "column">  
+            Pokemon Slot 2
+        </div>
+            
+        <div class= "column">  
+            Pokemon Slot 3
+        </div>
+
+        <div class= "column">  
+            Pokemon Slot 4
+        </div>
+
+        <div class= "column"> 
+            Pokemon Slot 5
+        </div>
+
+        <div class= "column"> 
+            Pokemon Slot 6
+        </div>
+
+    </div>
+  </section>
+  </body>
 </html>
