--- a/indx.html
+++ b/indx.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- tihs is where the java dumps the pokemon info -->
     <div id="pokemonInfo"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
