--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   </head>
 
   <body>
-    <section class="section">
+    <section class="topnav">
       <div>
         <h1>Pokemon Dream Team</h1>
+        <input type="text" placeholder="Search..">
       </div>
 
       <div class="columns">
