--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pokemon DreamTeam</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"/>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <!--Materialize CSS Link-->
+     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+     <!--Let browser know website is optimized for mobile-->
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+     <link  rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -17,23 +23,20 @@
         <input type="text" placeholder="Search..">
       </div>
 
-      <div class="columns">
-        <div class="column">Pokemon Slot 1</div>
-
-        <div class="column">Pokemon Slot 2</div>
-
-        <div class="column">Pokemon Slot 3</div>
-
-        <div class="column">Pokemon Slot 4</div>
-
-        <div class="column">Pokemon Slot 5</div>
-
-        <div class="column">Pokemon Slot 6</div>
+      <div class="row">
+        <div class="col s2">Pokemon Slot 1</div>
+        <div class="col s2">Pokemon Slot 2</div>
+        <div class="col s2">Pokemon Slot 3</div>
+        <div class="col s2">Pokemon Slot 4</div>
+        <div class="col s2">Pokemon Slot 5</div>
+        <div class="col s2">Pokemon Slot 6</div>
       </div>
     </section>
     <!-- tihs is where the java dumps the pokemon info -->
     <div id="pokemonInfo"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
