--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     <section class="topnav">
       <div>
         <h1>Pokemon Dream Team</h1>
-        <input type="text" placeholder="Search..">
       </div>
+    </section>
+
+    <section class="searchbar">
+        <input type="text" placeholder="Search..">
+        <button type="button">Search</button>
+      </div>
+    </section>
 
       <div class="row">
         <div class="col s2">Pokemon Slot 1</div>
@@ -32,6 +38,7 @@
         <div class="col s2">Pokemon Slot 6</div>
       </div>
     </section>
+
     <!-- tihs is where the java dumps the pokemon info -->
     <div id="pokemonInfo"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
