made merging fixes

--- a/index.html
+++ b/index.html
@@ -27,18 +27,13 @@
       <div>
         <h1>Pokemon Dream Team</h1>
 
-        <input
-          type="text"
-          placeholder="Search Pokemon by Name or Number"
-          id="searchBar"
-        />
-        <button id="searchButton">Search!</button>
+    
       </div>
     </section>
 
     <section class="searchbar">
-        <input type="text" placeholder="Search..">
-        <button type="button">Search</button>
+        <input type="text" placeholder="Search Pokemon by Name or Number" id="searchBar">
+        <button id="searchButton">Search!</button>
 
       </div>
     </section>
