--- a/index.html
+++ b/index.html
@@ -39,12 +39,24 @@
     </section>
 
       <div class="row">
-        <div class="col s2" id= "Slot1">Pokemon Slot 1</div>
-        <div class="col s2" id= "Slot2">Pokemon Slot 2</div>
-        <div class="col s2" id= "Slot3">Pokemon Slot 3</div>
-        <div class="col s2" id= "Slot4">Pokemon Slot 4</div>
-        <div class="col s2" id= "Slot5">Pokemon Slot 5</div>
-        <div class="col s2" id= "Slot6">Pokemon Slot 6</div>
+        <div class="col s2">Pokemon Slot 1
+            <div id="Slot1"></div>
+        </div>
+        <div class="col s2">Pokemon Slot 2
+            <div id="Slot2"></div>
+        </div>
+        <div class="col s2">Pokemon Slot 3
+            <div id="Slot3"></div>
+        </div>
+        <div class="col s2">Pokemon Slot 4
+            <div id="Slot4"></div>
+        </div>
+        <div class="col s2">Pokemon Slot 5
+            <div id="Slot5"></div>
+        </div>
+        <div class="col s2">Pokemon Slot 6
+            <div id="Slot6"></div>
+        </div>
       </div>
     </section>
 
