--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <section class="searchbar">
         <input type="text" placeholder="Search Pokemon by Name or Number" id="searchBar">
         <button id="searchButton">Search!</button>
+        <button id="saveButton">Save this team!</button>
+        <button id="clearButton">Clear this team!</button>
 
       </div>
     </section>
