added comments, made team slot img responsive, condensed some script

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Pokemon DreamTeam</title>
+    <title>Pokemon Dream Team</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -42,22 +42,22 @@
 
       <div class="row">
         <div class="col s2">Pokemon Slot 1
-            <div id="Slot1"></div>
+            <div class="teamSlots" id="Slot1"></div>
         </div>
         <div class="col s2">Pokemon Slot 2
-            <div id="Slot2"></div>
+            <div class="teamSlots" id="Slot2"></div>
         </div>
         <div class="col s2">Pokemon Slot 3
-            <div id="Slot3"></div>
+            <div class="teamSlots" id="Slot3"></div>
         </div>
         <div class="col s2">Pokemon Slot 4
-            <div id="Slot4"></div>
+            <div class="teamSlots" id="Slot4"></div>
         </div>
         <div class="col s2">Pokemon Slot 5
-            <div id="Slot5"></div>
+            <div class="teamSlots" id="Slot5"></div>
         </div>
         <div class="col s2">Pokemon Slot 6
-            <div id="Slot6"></div>
+            <div class="teamSlots" id="Slot6"></div>
         </div>
       </div>
     </section>
