--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <button id="searchButton">Search!</button>
         <button id="saveButton">Save this team!</button>
         <button id="clearButton">Clear this team!</button>
+        <button id="displayTeam">Show saved team!</button>
 
       </div>
     </section>
@@ -67,6 +68,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
   </body>
 </html>
